--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.layout.*?>
-<AnchorPane
-        xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="pl.bliw.gui.MainWindowController"
-        fx:id="mainContent"
-        xmlns="http://javafx.com/javafx/8.0.65">
-    <Canvas fx:id="canvas" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-            AnchorPane.rightAnchor="0.0"></Canvas>
+<?import javafx.scene.layout.AnchorPane?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mainContent" maxHeight="480" maxWidth="960" minHeight="480"
+            minWidth="960" xmlns="http://javafx.com/javafx/2.2" fx:controller="pl.bliw.gui.MainWindowController">
+    <Canvas fx:id="canvas" height="480" width="960"></Canvas>
 </AnchorPane>
